<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/text_verification"
        android:id="@+id/id_verification"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Verify"
        android:id="@+id/id_verify"
        android:layout_below="@+id/id_verification"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp"
        android:onClick="button_verify" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_availableData"
        android:id="@+id/id_availableData"
        android:onClick="button_Data"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/id_verify" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/text_enterCustomerNumber"
        android:id="@+id/id_entCustomerNumber"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_custNumber"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/id_entCustomerNumber"
        android:text="@string/text_custNumber" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_insert"
        android:id="@+id/id_Insert"
        android:layout_alignTop="@+id/id_verify"
        android:layout_alignEnd="@+id/id_verification"
        android:onClick="button_Insert" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_passengerName"
        android:id="@+id/id_passengerName"
        android:layout_below="@+id/id_custNumber"
        android:layout_alignParentStart="true"
        android:layout_marginTop="89dp" />

    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/text_searchedName"
        android:id="@+id/id_searchedName"
        android:layout_alignTop="@+id/id_passengerName"
        android:layout_alignEnd="@+id/id_availableData" />

</RelativeLayout>
